--- a/ContosoUniversity/Pages/Students/Create.cshtml
+++ b/ContosoUniversity/Pages/Students/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ContosoUniversity.CreateModel
+@model ContosoUniversity.Pages.Courses.CreateModel
 
 @{
     ViewData["Title"] = "Create";
