--- a/ContosoUniversity/Pages/Instructors/Delete.cshtml
+++ b/ContosoUniversity/Pages/Instructors/Delete.cshtml
@@ -5,18 +5,18 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Instructor</h4>
+    <h4>Course</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Instructor.LastName)
+            @Html.DisplayNameFor(model => model.Instructor.CourseAssignments)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Instructor.LastName)
+            @Html.DisplayFor(model => model.Instructor.CourseAssignments)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Instructor.FirstMidName)
@@ -25,13 +25,31 @@
             @Html.DisplayFor(model => model.Instructor.FirstMidName)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructor.FullName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructor.FullName)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Instructor.HireDate)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Instructor.HireDate)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructor.LastName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructor.LastName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Instructor.OfficeAssignment)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Instructor.OfficeAssignment)
+        </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Instructor.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
