--- a/ContosoUniversity/Pages/Instructors/Details.cshtml
+++ b/ContosoUniversity/Pages/Instructors/Details.cshtml
@@ -1,37 +1,43 @@
 ﻿@page
-@model ContosoUniversity.Pages.Instructors.DetailsModel
+@model ContosoUniversity.Pages.Courses.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h2>Details</h2>
 
 <div>
-    <h4>Instructor</h4>
+    <h4>Course</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Instructor.LastName)
+            @Html.DisplayNameFor(model => model.Course.CourseID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Instructor.LastName)
+            @Html.DisplayFor(model => model.Course.CourseID)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Instructor.FirstMidName)
+            @Html.DisplayNameFor(model => model.Course.Title)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Instructor.FirstMidName)
+            @Html.DisplayFor(model => model.Course.Title)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Instructor.HireDate)
+            @Html.DisplayNameFor(model => model.Course.Credits)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Instructor.HireDate)
+            @Html.DisplayFor(model => model.Course.Credits)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Course.Department)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.Department.Name)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Instructor.ID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Course.CourseID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
