--- a/ContosoUniversity/Pages/Students/Details.cshtml
+++ b/ContosoUniversity/Pages/Students/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ContosoUniversity.Pages.Courses.DetailsModel
+@model ContosoUniversity.Pages.Students.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
