--- a/ContosoUniversity/Pages/Students/Edit.cshtml
+++ b/ContosoUniversity/Pages/Students/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ContosoUniversity.Pages.Courses.EditModel
+@model ContosoUniversity.Pages.Students.EditModel
 
 @{
     ViewData["Title"] = "Edit";
